# SoDaIPC

./: CMakeLists.txt  Doxyfile.in  README.md
cmake/: BuildPackage.cmake  CMakeLists.txt  FindSoDaIPC.cmake  SoDaIPCConfig.cmake  SoDaIPCConfigVersion.cmake.in
include/: Buffer.hxx  BufferPool.hxx  MailBox.hxx
src/: CMakeLists.txt
test/: BufferTest.cxx  CMakeLists.txt  MailBoxTest.cxx  allocator_exp.cxx
